--- a/EventosWebApp/web/WEB-INF/web.xml
+++ b/EventosWebApp/web/WEB-INF/web.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <display-name>Descritor de Implantação</display-name>
-    <servlet>
+    
+<!--    <servlet>
         <servlet-name>ControllerServlet</servlet-name>
         <servlet-class>controller.servlet.ControllerServlet</servlet-class>
     </servlet>
@@ -19,7 +20,7 @@
         <url-pattern>/Mensagem</url-pattern>
         <url-pattern>/SalvarUsuario</url-pattern>
         <url-pattern>/Sair</url-pattern>
-    </servlet-mapping>
+    </servlet-mapping>-->
     <session-config>
         <session-timeout>
             30
