--- a/EventosWebApp/nbproject/project.properties
+++ b/EventosWebApp/nbproject/project.properties
@@ -29,6 +29,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.hamcrest-core-1.3.jar=C:\\Users\\LENOVO\\Downloads\\hamcrest-core-1.3.jar
+file.reference.junit-4.13.2.jar=C:\\Users\\LENOVO\\Downloads\\junit-4.13.2.jar
+file.reference.mockito-all-1.9.5.jar=C:\\Users\\LENOVO\\Downloads\\mockito-all-1.9.5.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,7 +46,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.JDBC.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -55,8 +58,11 @@ javac.processorpath=\
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.junit-4.13.2.jar}:\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.mockito-all-1.9.5.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -72,7 +78,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
